src/snapshots/afrotd__parser__tests__interpreation_html_3.2.4_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.2.4.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A erzielt einen Touchdown und die 40-Sekunden Play Clock wird
            gestartet. Ohne das Spiel zu unterbrechen sieht der Referee den
            Umpire über dem Ball stehen und dass alle anderen Schiedsrichter
            ihre Positionen eingenommen haben. Die Play Clock zeigt (a) 25 oder
            mehr Sekunden oder (b) 24 oder weniger Sekunden an.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Der Referee schickt den Umpire auf seine Position im
                Defense Backfield und lässt zu, dass der Snap durchgeführt
                wird. (b) Der Referee zeigt an, dass die Play Clock auf 25
                Sekunden gesetzt werden soll und schickt danach den Umpire auf
                seine Position ins Defense Backfield, damit der Snap
                durchgeführt werden kann.
            </p>
        </details>
    </div>
</article>
