src/snapshots/afrotd__parser__tests__interpreation_html_3.2.4_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.2.4.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A erzielt einen Touchdown und die 40-Sekunden Play Clock wird
            gestartet. Der Ball befindet sich an der B-3 im Mittelpunkt
            zwischen den Hash Marks. Bei 24 Sekunden auf der Play Clock
            verlangen Team A’s Head Coach oder ein Team-Captain, dass der Ball
            auf die linke Hash Mark gelegt werden soll.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Schiedsrichter ignorieren das Verlangen. Team A kann ein
                Timeout nehmen und den Ball anders positionieren zu lassen.
            </p>
        </details>
    </div>
</article>
