src/snapshots/afrotd__parser__tests__interpreation_html_3.3.1_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.1.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Beim 2. und 14 erzielt A45 sechs Meter Raumgewinn und wird zu Boden
            gebracht, wobei sich der Ball in seinem Besitz befindet. Der
            Linesman hält die hintere Stange der Kette für die vordere Stange
            und gibt irrtümlicherweise das Zeichen zum Anhalten der Uhr.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Sobald der Fehler von irgendeinem Schiedsrichter entdeckt wird,
                muss dieser anzeigen, dass die Game Clock gestartet werden
                soll.
            </p>
        </details>
    </div>
</article>
