src/snapshots/afrotd__parser__tests__interpreation_html_3.3.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 6. Team A erzielt mit einem Lauf, der im Spielfeld endet,
            (a) acht Meter oder (b) fünf Meter. B1 war während des Spieles
            Offside.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Team A’s Ball. First Down und 10. Die Game Clock startet
                beim Signal des Referees. (b) Team A’s Ball. 4. und 1. Game
                Clock startet beim Signal des Referees (Regeln 3.3.2.d.3 und
                3.3.2.e.1).
            </p>
        </details>
    </div>
</article>
