src/snapshots/afrotd__parser__tests__interpreation_html_3.3.2_8.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.3.2.VIII
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 5 von der B-15. Zu einem späten Zeitpunkt in der vierten
            Spielperiode liegt Team A mit 7:10 zurück. Quarterback A11 muss
            ausweichen, advanct und ist an der B-12, als er einen
            unvollständigen Vorwärtspass wirft. Als der Ball dead wird, zeigt
            die Game Clock 0:13. Team B nimmt die Strafe für den illegalen
            Vorwärtspass an.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                4. und 7 von der B-17. Team B hat die Möglichkeit, einen
                10-SekundenAbzug von der Game Clock zu wählen. Dann wird die
                Game Clock auf 0:03 gesetzt und startet mit der Ballfreigabe
                durch den Referee.
            </p>
        </details>
    </div>
</article>
